--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>projeto2B</title>
+</head>
+<body>
+    <header  class="cabecalho">
 
+     <h1> class="cabecalho-titulo"> 
+     meu titulo
+     </h1>
+
+     <img src="imagem.png"  alt="imagem que representa o cabecalho"
+
+     
+    </header>
+
+
+
+</body>
+</html>
