--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header  class="cabecalho">
 
-     <h1> class="cabecalho-titulo"> 
+     <h1> class="Noite estrelada"> 
      meu titulo
      </h1>
 
